fix: change overflow clip target from VPHome to VPContent.is-home

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -19,7 +19,7 @@
   --vp-c-bg-soft: #111 !important;
 }
 
-.VPHome {
+.VPContent.is-home {
   overflow-x: clip;
 }
 
